High Contrast: switch style fix

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -2004,30 +2004,28 @@ switch {
           border-color: $insensitive_fg_color;
         }
     }
-    & slider {
-      margin: -1px;
-      min-width: 45px;
-      min-height: 27px;
-      border: 1px solid;
-      border-radius: 3px;
-      @include button(normal, $edge: none);
-      box-shadow: inset 0 1px white,
-                  inset 0 -2px transparentize($bg_color,0.4),
-                  inset 0 -1px mix($bg_color,$borders_color,50%);
-      &:hover {
-        @include button(hover, $edge: none);
-        box-shadow: inset 0 1px white,
-                    inset 0 -2px transparentize($bg_color,0.4),
-                    inset 0 -1px mix($bg_color,$borders_color,50%);
-      }
-      &:active { border-color: $selected_borders_color; }
-      &:disabled { @include button(insensitive, $edge: none); }
-      &:backdrop { @include button(backdrop);
-        &:active{ border-color: $backdrop_borders_color; }
-        &:disabled {
-          @include button(backdrop-insensitive);
-        }
-      }
+
+    slider {
+        margin: -1px;
+        min-width: 45px;
+        min-height: 27px;
+        border: 2px solid;
+        border-radius: 3px;
+        @include button(normal);
+    }
+
+    &:hover slider { @include button(hover); }
+
+    &:active slider { border: 2px solid $selected_borders_color; }
+
+    &:disabled slider { @include button(insensitive); }
+
+    &:backdrop {
+        slider { @include button(backdrop); }
+
+        &:active slider { border-color: if($variant == 'light', $selected_bg_color, $selected_borders_color); }
+
+        &:disabled slider { @include button(backdrop-insensitive); }
     }
 }
 
