--- a/gtk/theme/HighContrast/gtk-contained-inverse.css
+++ b/gtk/theme/HighContrast/gtk-contained-inverse.css
@@ -2084,48 +2084,46 @@ switch {
     margin: -1px;
     min-width: 45px;
     min-height: 27px;
-    border: 1px solid;
+    border: 2px solid;
     border-radius: 3px;
     border-width: 2px;
     border-style: solid;
     color: #fff;
     background-image: none;
     background-color: #000;
+    border-color: gray; }
+  switch:hover slider {
+    border-width: 2px;
+    border-style: solid;
+    color: #fff;
+    background-color: #000;
     border-color: gray;
-    box-shadow: inset 0 1px white, inset 0 -2px rgba(0, 0, 0, 0.6), inset 0 -1px #404040; }
-    switch slider:hover {
-      border-width: 2px;
-      border-style: solid;
-      color: #fff;
-      background-color: #000;
-      border-color: gray;
-      background-image: none;
-      box-shadow: inset 0 1px white, inset 0 -2px rgba(0, 0, 0, 0.6), inset 0 -1px #404040; }
-    switch slider:active {
-      border-color: #aaa; }
-    switch slider:disabled {
-      border-width: 2px;
-      border-style: solid;
-      color: gray;
-      background-color: #070707;
-      border-color: #494949;
-      background-image: none; }
-    switch slider:backdrop {
-      border-width: 2px;
-      border-style: solid;
-      color: #fff;
-      background-color: #000;
-      border-color: #737373;
-      background-image: none; }
-      switch slider:backdrop:active {
-        border-color: #737373; }
-      switch slider:backdrop:disabled {
-        border-width: 2px;
-        border-style: solid;
-        color: gray;
-        background-color: #070707;
-        border-color: #494949;
-        background-image: none; }
+    background-image: none; }
+  switch:active slider {
+    border: 2px solid #aaa; }
+  switch:disabled slider {
+    border-width: 2px;
+    border-style: solid;
+    color: gray;
+    background-color: #070707;
+    border-color: #494949;
+    background-image: none; }
+  switch:backdrop slider {
+    border-width: 2px;
+    border-style: solid;
+    color: #fff;
+    background-color: #000;
+    border-color: #737373;
+    background-image: none; }
+  switch:backdrop:active slider {
+    border-color: #aaa; }
+  switch:backdrop:disabled slider {
+    border-width: 2px;
+    border-style: solid;
+    color: gray;
+    background-color: #070707;
+    border-color: #494949;
+    background-image: none; }
 
 /*************************
  * Check and Radio items *
