--- a/gtk/theme/HighContrast/gtk-contained.css
+++ b/gtk/theme/HighContrast/gtk-contained.css
@@ -2088,48 +2088,46 @@ switch {
     margin: -1px;
     min-width: 45px;
     min-height: 27px;
-    border: 1px solid;
+    border: 2px solid;
     border-radius: 3px;
     border-width: 2px;
     border-style: solid;
     color: #000;
     background-image: none;
     background-color: #fff;
+    border-color: gray; }
+  switch:hover slider {
+    border-width: 2px;
+    border-style: solid;
+    color: #000;
+    background-color: #fff;
     border-color: gray;
-    box-shadow: inset 0 1px white, inset 0 -2px rgba(255, 255, 255, 0.6), inset 0 -1px silver; }
-    switch slider:hover {
-      border-width: 2px;
-      border-style: solid;
-      color: #000;
-      background-color: #fff;
-      border-color: gray;
-      background-image: none;
-      box-shadow: inset 0 1px white, inset 0 -2px rgba(255, 255, 255, 0.6), inset 0 -1px silver; }
-    switch slider:active {
-      border-color: #000; }
-    switch slider:disabled {
-      border-width: 2px;
-      border-style: solid;
-      color: gray;
-      background-color: white;
-      border-color: silver;
-      background-image: none; }
-    switch slider:backdrop {
-      border-width: 2px;
-      border-style: solid;
-      color: #000;
-      background-color: #fff;
-      border-color: #8d8d8d;
-      background-image: none; }
-      switch slider:backdrop:active {
-        border-color: #8d8d8d; }
-      switch slider:backdrop:disabled {
-        border-width: 2px;
-        border-style: solid;
-        color: gray;
-        background-color: white;
-        border-color: silver;
-        background-image: none; }
+    background-image: none; }
+  switch:active slider {
+    border: 2px solid #000; }
+  switch:disabled slider {
+    border-width: 2px;
+    border-style: solid;
+    color: gray;
+    background-color: white;
+    border-color: silver;
+    background-image: none; }
+  switch:backdrop slider {
+    border-width: 2px;
+    border-style: solid;
+    color: #000;
+    background-color: #fff;
+    border-color: #8d8d8d;
+    background-image: none; }
+  switch:backdrop:active slider {
+    border-color: #000; }
+  switch:backdrop:disabled slider {
+    border-width: 2px;
+    border-style: solid;
+    color: gray;
+    background-color: white;
+    border-color: silver;
+    background-image: none; }
 
 /*************************
  * Check and Radio items *
